# llama.cpp-GPU-S24-Ultra

./: CMakeLists.txt
.github/workflows/: android-gpu-build.yml
examples/android/: CMakeLists.txt  build.gradle  gradle-wrapper.properties  gradlew  settings.gradle
examples/android/app/: build.gradle
